@@ -67,9 +67,17 @@ namespace Rcpp {
             default:
                 const char* fmt = "Not compatible with requested type: "
                                   "[type=%s; target=%s].";
+#ifndef NDEBUG
+                fprintf(stderr,
+                        fmt,
+                        Rf_type2char(TYPEOF(x)),
+                        Rf_type2char(RTYPE));
+                abort();
+#elif
                 throw ::Rcpp::not_compatible(fmt,
                                              Rf_type2char(TYPEOF(x)),
                                              Rf_type2char(RTYPE));
+#endif
             }							// #nocov end
             return R_NilValue; /* -Wall */
         }
